# sim-dags

./: .gitignore  README.md  pyproject.toml
documentation/: elemental_dags.typ  example_dags.typ  functions.typ
src/sim_dags/: __init__.py  core.py  dag_simulator.py  demo_sims.py  example_generators.py  example_validation.py  exceptions.py  generators.py  iterate_sims.py  probability.py  simple_dags_demo.py  utils.py
src/tests/: test_bugs.py  test_core.py  test_dag_simulator.py  test_example_generators.py  test_example_validation.py  test_iterate_sims.py  test_probability.py
