[project]
name = "sim-dags"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luc Heuff", email = "10941592+LucHeuff@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
sim-dags = "sim_dags:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
